crates/ruff_python_parser/tests/snapshots/invalid_syntax@star_slices.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/star_slices.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..19,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    value: Subscript(
                        ExprSubscript {
                            node_index: NodeIndex(None),
                            range: 0..18,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..5,
                                    id: Name("array"),
                                    ctx: Load,
                                },
                            ),
                            slice: Slice(
                                ExprSlice {
                                    node_index: NodeIndex(None),
                                    range: 6..17,
                                    lower: Some(
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 6..12,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 7..12,
                                                        id: Name("start"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    upper: Some(
                                        Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 13..17,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 14..17,
                                                        id: Name("end"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    step: None,
                                },
                            ),
                            ctx: Load,
                            is_typeof: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | array[*start:*end]
  |       ^^^^^^ Syntax Error: Starred expression cannot be used here


  |
1 | array[*start:*end]
  |              ^^^^ Syntax Error: Starred expression cannot be used here
